<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Beep</string>
    <string name="app_description">기프티콘을 한번에 관리해요</string>
    <string name="recognize_name">자동 입력 기능</string>
    <string name="recognize_description">쉽고 빠르게 쿠폰을 등록하고</string>
    <string name="map_name">지도 기반 추천</string>
    <string name="map_description">가까운 장소에서 쓸 수 있는 쿠폰을 모아보세요</string>

    <string name="google_login">Google 계정으로 로그인</string>
    <string name="kakao_login">카카오 계정으로 로그인</string>
    <string name="naver_login">네이버 계정으로 로그인</string>
    <string name="login_method">로그인 방법 선택</string>
    <string name="login_description">계정 연동없이 이용할 수 있어요</string>
    <string name="guest_login">비회원 로그인</string>

    <string name="guide_permission_title">접근 권한 안내</string>
    <string name="guide_permission_description">이용을 위해 접근 권한을 허용해 주세요</string>
    <string name="guide_permission_list">선택 권한 목록</string>
    <string name="guide_permission_notification">알림</string>
    <string name="guide_permission_notification_description">알림 메시지 발송</string>
    <string name="guide_permission_picture">사진</string>
    <string name="guide_permission_picture_description">쿠폰 이미지 첨부</string>
    <string name="guide_permission_location">위치</string>
    <string name="guide_permission_location_description">위치기반 서비스 이용</string>
    <string name="guide_permission_caution">허용하지 않아도 서비스를 이용할 수 있으나\n일부 서비스의 이용이 제한 될 수 있습니다.</string>
    <string name="guide_permission_agree">동의하고 시작</string>
</resources>