<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="24dp"/>

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:textAppearance="@style/Text.Title1"
        android:textColor="@color/font_dark_gray"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@id/text_app_name"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:textAppearance="@style/Text.HighlightText2"
        android:textColor="@color/font_dark_gray"
        android:text="@string/guide_permission_title"/>

    <TextView
        android:id="@+id/text_permission_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginStart="38dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        android:textAppearance="@style/Text.Title4"
        android:textColor="@color/font_dark_gray"
        android:text="@string/guide_permission_list"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_notification_permission"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="38dp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_permission_list"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:cardCornerRadius="13.2dp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_notification"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="center"
                android:contentDescription="@null"
                android:src="@drawable/icon_notification"/>

            <TextView
                android:id="@+id/text_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/icon_notification"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_notification_description"
                android:textAppearance="@style/Text.Title6"
                android:textColor="@color/font_dark_gray"
                android:text="@string/guide_permission_notification"/>

            <TextView
                android:id="@+id/text_notification_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/text_notification"
                app:layout_constraintTop_toBottomOf="@id/text_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/Text.Body2"
                android:textColor="@color/font_medium_gray"
                android:text="@string/guide_permission_notification_description"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_storage_permission"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="38dp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/card_notification_permission"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:cardCornerRadius="13.2dp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_storage"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_storage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="center"
                android:contentDescription="@null"
                android:src="@drawable/icon_storage"/>

            <TextView
                android:id="@+id/text_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/icon_storage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_storage_description"
                android:textAppearance="@style/Text.Title6"
                android:textColor="@color/font_dark_gray"
                android:text="@string/guide_permission_storage"/>

            <TextView
                android:id="@+id/text_storage_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/text_storage"
                app:layout_constraintTop_toBottomOf="@id/text_storage"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/Text.Body2"
                android:textColor="@color/font_medium_gray"
                android:text="@string/guide_permission_storage_description"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_location_permission"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="38dp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/card_storage_permission"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:cardCornerRadius="13.2dp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="center"
                android:contentDescription="@null"
                android:src="@drawable/icon_location"/>

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/icon_location"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/text_location_description"
                android:textAppearance="@style/Text.Title6"
                android:textColor="@color/font_dark_gray"
                android:text="@string/guide_permission_location"/>

            <TextView
                android:id="@+id/text_location_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@id/text_location"
                app:layout_constraintTop_toBottomOf="@id/text_location"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/Text.Body2"
                android:textColor="@color/font_gray"
                android:text="@string/guide_permission_location_description"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/btn_agree"
        android:textAppearance="@style/Text.SubText"
        android:textColor="@color/font_medium_gray"
        android:text="@string/guide_permission_caution"/>

    <TextView
        android:id="@+id/btn_agree"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:gravity="center"
        android:textAppearance="@style/Text.Title7"
        android:textColor="@color/white"
        android:text="@string/guide_permission_agree"
        android:backgroundTint="@color/beep_pink"
        android:background="@drawable/bg_rect_r16"/>
</androidx.constraintlayout.widget.ConstraintLayout>